# PPT-Creator

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.web  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  requirements.txt  tsconfig.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  (+1 more)
.openai/: hosting.json
app/: default-slides.ts  generation-timing.ts  globals.css  job-center.ts  layout.tsx  page.tsx  preferences.ts  presentation-builder.ts  provider-options.ts  templates.ts  types.ts
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260720_0001_editable_presentations.py  20260720_0002_versions_retry.py  20260720_0003_generation_jobs.py  20260720_0004_active_job_constraint.py
backend/app/: __init__.py  config.py  database.py  job_timing.py  main.py  models.py  rendering.py  schemas.py  security.py  source_parser.py  worker.py
backend/app/ai/: __init__.py  base.py  local_image.py  ollama.py  remote.py
backend/tests/: test_content_editing.py  test_generation_jobs.py  test_image_provider_selection.py  test_job_timing.py  test_local_image_provider.py  test_ollama_provider.py  test_presentation_workflows.py  test_prompt_grounding.py  test_remote_providers.py  test_rendering.py  test_source_parser.py
docs/: ARCHITECTURE.md
scripts/: start.sh  stop.sh
tests/: generation-timing.test.ts  job-center.test.ts  preferences.test.ts  presentation-builder.test.ts  rendered-html.test.mjs
(+2 files in other folders)
