[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt-creator-api"
version = "0.1.0"
description = "PPT Creator FastAPI service"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0,<2",
  "asyncpg>=0.30.0,<1",
  "cryptography>=45.0.0,<50",
  "fastapi>=0.116.0,<1",
  "httpx>=0.28.0,<1",
  "pydantic-settings>=2.10.0,<3",
  "pypdf>=5.7.0,<7",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "uvicorn[standard]>=0.35.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<10",
  "pytest-asyncio>=1.0.0,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]
